--- a/qrtoolkit_core/templates/qrtoolkit_core/qrcode/code_list.html
+++ b/qrtoolkit_core/templates/qrtoolkit_core/qrcode/code_list.html
@@ -1,4 +1,4 @@
-{% extends 'api/layout.html' %}
+{% extends 'qrtoolkit_core/layout.html' %}
 {% block content %}
 <div class="container">
   <div class="row">
