--- a/qrtoolkit_core/templates/qrtoolkit_core/qrcode/index.html
+++ b/qrtoolkit_core/templates/qrtoolkit_core/qrcode/index.html
@@ -1,4 +1,4 @@
-{% extends 'api/layout.html' %} {% block title %}
+{% extends 'qrtoolkit_core/layout.html' %} {% block title %}
 <title>Basic information page</title>
 {% endblock title %} {% block content %}
 <div class="container">
