--- a/qrtoolkit_core/templates/qrtoolkit_core/qrcode/kiosk.html
+++ b/qrtoolkit_core/templates/qrtoolkit_core/qrcode/kiosk.html
@@ -1,4 +1,4 @@
-{% extends 'api/layout.html' %} {% block content %}
+{% extends 'qrtoolkit_core/layout.html' %} {% block content %}
     <div class="container">
         <h1 class="text-center mt-3">{{ qrcode.title }}</h1>
         <div class="row">
