add download options for qr codes. Users only see the qr codes of their department.

--- a/qrtoolkit_core/templates/qrtoolkit_core/qrcode/scanner.html
+++ b/qrtoolkit_core/templates/qrtoolkit_core/qrcode/scanner.html
@@ -10,7 +10,7 @@
 {% block breadcrumbs %}
     <div class="breadcrumbs">
         <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-        &rsaquo; <a href="{% url 'admin:api_qrcode_changelist' %}">QrCode</a> &rsaquo; Scan
+        &rsaquo; <a href="{% url 'admin:qrtoolkit_core_qrcode_changelist' %}">QrCode</a> &rsaquo; Scan
     </div>
 {% endblock %}
 
