--- a/qrtoolkit_core/templates/qrtoolkit_core/qrcode/code.html
+++ b/qrtoolkit_core/templates/qrtoolkit_core/qrcode/code.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="http://qrcodeservice.herokuapp.com/?query={{ request.scheme }}://{{ request.get_host }}/{{code.uuid}}" />
+    <img src="http://qrcodeservice.herokuapp.com/?query={{ request.scheme }}://{{ request.get_host }}/{{code.short_uuid}}" />
 </body>
 
 </html>
