feat: kiosk mode to ghent style

--- a/qrtoolkit_core/templates/qrtoolkit_core/layout.html
+++ b/qrtoolkit_core/templates/qrtoolkit_core/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -19,6 +19,9 @@
             integrity="sha384-5h4UG+6GOuV9qXh6HqOLwZMY4mnLPraeTrjT5v07o347pj6IkfuoASuGBhfDsp3d"
             crossorigin="anonymous"
     ></script>
+    {% block extra_css %}
+
+    {% endblock %}
     {% block title %}
         <title>qr code toolkit</title>
     {% endblock title %}
